--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-home-title: H2O Theme For Jekyll
-description: 或许是最漂亮的Jekyll主题
+home-title: 不要因为繁忙 而忘记生活
+description: 我在未来等你
+header-img: assets/img/banner.jpg
 ---
 
 {% include header.html %}
